Criação da page "sobre nós" e linkagem do nav

--- a/Receitapage/receita.html
+++ b/Receitapage/receita.html
@@ -27,7 +27,7 @@
     <ol>
         <a href="../index.html"><li>Home</li></a>
         <a href="receita.html"><li>Receitas</li></a>
-        <a href="#"><li>Sobre nós</li></a>
+        <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
         <a href="#"><li>Contato</li></a>
     </ol>
 </nav>
