--- a/Receitas/salada.html
+++ b/Receitas/salada.html
@@ -26,7 +26,7 @@
         <ol>
             <a href="../index.html"><li>Home</li></a>
             <a href="../Receitapage/receita.html"><li>Receitas</li></a>
-            <a href="#"><li>Sobre nós</li></a>
+            <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
             <a href="#"><li>Contato</li></a>
         </ol>
     </nav>
