--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <p>
             Aqui você se sente no paraíso da culinária! <br><br>
 
-            <strong>Receitas  completas</strong> de diversos pratos, desde doces a salgados. <br> Se você sente dificuldade em cozinhar... Acredite, <strong>seus problemas acabam aqui!</strong> <br><br>
+            <strong>Receitas  completas</strong> de diversos pratos, desde doces a salgados.  Se você sente dificuldade em cozinhar... Acredite, <strong>seus problemas acabam aqui!</strong> <br><br>
 
             Sinta se a vontade para explorar nossas receitas e encarar novos desafios. <br>
            </p>
@@ -103,7 +103,7 @@
 
     <section class="beneficios" id="beneficios">
         <figure>
-            <img src="img/cozinhando.png" alt="Pessoa cozinhando">
+            <img class="imgBnfc" src="img/cozinhando.png" alt="Pessoa cozinhando">
         </figure>
         
         <div class="textArea">
@@ -156,7 +156,7 @@
          <div class="txtContato">
          <h4>Alguma dúvida ou sugestão?</h4>
             <p>
-                Sinta se confortável para compartilhar suas <strong>dúvidas, <br>sugestões</strong> de novas receitas ou até mesmo deixar seu <br><strong>Feedback</strong> sobre o Bom Sabor.
+                Sinta-se confortável para compartilhar suas <strong>dúvidas, <br>sugestões</strong> de novas receitas ou até mesmo deixar seu <br><strong>Feedback</strong> sobre o Bom Sabor.
             </p>
 
             <a href=""><button class="ctt">Entrar em contato</button></a>
