Tela Contato e Linkagem

--- a/Receitapage/receita.html
+++ b/Receitapage/receita.html
@@ -28,7 +28,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="receita.html"><li>Receitas</li></a>
         <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
-        <a href="#"><li>Contato</li></a>
+        <a href="../Contato/contato.html"><li>Contato</li></a>
     </ol>
 </nav>
 
@@ -133,15 +133,17 @@
     <section class="footer" id="footer">
         <div>
             <figure>
-                <img src="img/logo.png" alt="Logo">
+                <a href="../index.html">
+                    <img src="img/logo.png" alt="Logo">
+                </a>
             </figure>
         </div>
         <div>
             <ul>
-                <a href="#">
+                <a href="../Sobre/sobre.html">
                    <li>Sobre nós</li> 
                 </a>
-                <a href="#">
+                <a href="../Contato/contato.html">
                    <li>Contato</li>
                 </a>            
             </ul>
