--- a/Receitas/pizza.html
+++ b/Receitas/pizza.html
@@ -27,7 +27,7 @@
             <a href="../index.html"><li>Home</li></a>
             <a href="../Receitapage/receita.html"><li>Receitas</li></a>
             <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
-            <a href="#"><li>Contato</li></a>
+            <a href="../Contato/contato.html"><li>Contato</li></a>
         </ol>
     </nav>
 
@@ -124,15 +124,17 @@
         <section class="footer" id="footer">
             <div>
                 <figure>
-                    <img src="imagens/logo.png" alt="Logo">
+                    <a href="../index.html">
+                        <img src="imagens/logo.png" alt="Logo">
+                    </a>
                 </figure>
             </div>
             <div>
                 <ul>
-                    <a href="#">
+                    <a href="../Sobre/sobre.html">
                        <li>Sobre nós</li> 
                     </a>
-                    <a href="#">
+                    <a href="../Contato/contato.html">
                        <li>Contato</li>
                     </a>            
                 </ul>
