--- a/Entrar/entre.html
+++ b/Entrar/entre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contato.css">
+    <link rel="stylesheet" href="entre.css">
     <link rel="shortcut icon" href="../img/panela.png" type="image/x-icon">
     <title>Bom Sabor</title>
 </head>
@@ -28,7 +28,7 @@
             <a href="../index.html"><li>Home</li></a>
             <a href="../Receitapage/receita.html"><li>Receitas</li></a>
             <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
-            <a href="contato.html"><li>Contato</li></a>
+            <a href="../Contato/contato.html"><li>Contato</li></a>
         </ol>
     </nav>
 
@@ -36,30 +36,25 @@
         <section class="container">
             <div>
                 <figure>
-                    <img src="../img/contact.png" alt="contato">
+                    <img src="../img/login.png" alt="contato">
                 </figure>
             </div>
 
             <div class="conteudo" id="conteudo">
-                <h1>Contate-nos</h1>
+                <h1>Seja bem-vindo!</h1>
 
                 <div class="label" id="label">
-                    <label for="name" type="name" id="name">Nome completo:</label>
-                    <input type="text" class="inpName" id="inpName">
 
                     <label for="e-mail" type="e-mail" id="email">E-mail:</label>
-                    <input type="text" class="inpEmail" id="inpEmail">
+                    <input type="email" class="inpEmail" id="inpEmail">
 
-                    <label for="assunto" type="text" id="assunto">Assunto:</label>
-                    <input type="text" class="inpAssunto" id="inpAssunto">
+                    <label for="assunto" type="text" id="assunto">Senha:</label>
+                    <input type="password" class="inpSenha" id="inpAssunto">
 
-                    <label for="msg" type="msg" id="msg">Mensagem:</label>
-                    <textarea name="inpMsg" class="inpMsg" id="inpMsg" cols="30" rows="5"></textarea>
-
-                    <button class="enviar" id="enviar">Enviar</button>
+                    <button class="enviar" id="enviar">Entrar</button>
                 </div>
 
-               
+               <span>Esqueceu sua senha?<em>Clique aqui!</em></span>
 
             </div>
         </section>
@@ -79,7 +74,7 @@
                     <a href="../Sobre/sobre.html">
                        <li>Sobre nós</li> 
                     </a>
-                    <a href="contato.html">
+                    <a href="../Contato/contato.html">
                        <li>Contato</li>
                     </a>            
                 </ul>
