Linkagem e correção de dimensões

--- a/Receitapage/receita.html
+++ b/Receitapage/receita.html
@@ -19,8 +19,8 @@
        <img class="lupa" src="img/lupa 1.png" alt="Pesquisar">
     </div>
 
-    <button class="entre" id="entrar">ENTRE</button>
-    <button class="cad" id="cad">CADASTRE-SE</button>
+    <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
+        <button class="cad" id="cad"> <a href="">CADASTRE-SE</a></button>
 </header>
 
 <nav class="nav">
