--- a/Sobre/sobre.html
+++ b/Sobre/sobre.html
@@ -19,8 +19,8 @@
        <img class="lupa" src="../img/lupa 1.png" alt="Pesquisar">
     </div>
 
-    <button class="entre" id="entrar">ENTRE</button>
-    <button class="cad" id="cad">CADASTRE-SE</button>
+    <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
+    <button class="cad" id="cad"> <a href="">CADASTRE-SE</a></button>
 </header>
 
 <nav class="nav">
@@ -28,7 +28,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="../Receitapage/receita.html"><li>Receitas</li></a>
         <a href="../Sobre/sobre.html"><li>Sobre nós</li></a>
-        <a href="#"><li>Contato</li></a>
+        <a href="../Contato/contato.html"><li>Contato</li></a>
     </ol>
 </nav>
 
@@ -66,15 +66,17 @@
     <section class="footer" id="footer">
         <div>
             <figure>
-                <img src="../img/logo.png" alt="Logo">
+                <a href="../index.html">
+                    <img src="../img/logo.png" alt="Logo">
+                </a>
             </figure>
         </div>
         <div>
             <ul>
-                <a href="#">
+                <a href="../Sobre/sobre.html">
                    <li>Sobre nós</li> 
                 </a>
-                <a href="#">
+                <a href="../Contato/contato.html">
                    <li>Contato</li>
                 </a>            
             </ul>
