--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     </figure>
     
     <div class="search" id="search">
-       <input type="text" name="search" id="search">
+       <input type="text" name="search" id="txtBusca">
        <img class="lupa" src="img/lupa 1.png" alt="Pesquisar">
     </div>
 
+    
     <button class="entre" id="entrar"> <a href="Entrar/entre.html">ENTRE</a></button>
     <button class="cad" id="cad"> <a href="Cadastro/cad.html">CADASTRE-SE</a></button>
 </header>
@@ -50,7 +51,7 @@
 
         <div class="btn" id="btn">
            <a href="Receitapage/receita.html"><button class="receitaBtn">Ver Receitas</button></a>
-           <a href=""><button class="cadBtn">Cadastrar</button></a>
+           <a href="Cadastro/cad.html"><button class="cadBtn">Cadastrar</button></a>
         </div>
 
     </section>
@@ -139,7 +140,7 @@
             novamente</strong> caso precise.
         </p>
 
-        <a href=""><button class="cadMembro">Cadastrar</button></a>
+        <a href="Cadastro/cad.html"><button class="cadMembro">Cadastrar</button></a>
         </div>
 
         <figure>
@@ -161,7 +162,7 @@
                 Sinta-se confortável para compartilhar suas <strong>dúvidas, <br>sugestões</strong> de novas receitas ou até mesmo deixar seu <br><strong>Feedback</strong> sobre o Bom Sabor.
             </p>
 
-            <a href=""><button class="ctt">Entrar em contato</button></a>
+            <a href="Contato/contato.html"><button class="ctt">Entrar em contato</button></a>
             </div>
     </section>
     <section class="footer" id="footer">
