--- a/Sobre/sobre.html
+++ b/Sobre/sobre.html
@@ -17,9 +17,17 @@
     </figure>
     
     <div class="search" id="search">
-       <input type="text" name="search" id="search">
+       <input type="text" name="search" id="txtBusca">
        <img class="lupa" src="../img/lupa 1.png" alt="Pesquisar">
     </div>
+
+    <!-- Lista da barra de pesquisa-->
+
+    <div class="busca">
+        <ul class="searchResult"id="searchResults"></ul>
+    </div> 
+
+    <!-- -->
 
     <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
     <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
@@ -90,6 +98,6 @@
     </section>
 </footer>
     
- <script src="script.js"></script>   
+ <script src="sobre.js"></script>   
 </body>
 </html>
