--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
        <img class="lupa" src="img/lupa 1.png" alt="Pesquisar">
     </div>
 
+     <!-- Lista da barra de pesquisa-->
+
+     <div class="busca">
+        <ul class="searchResult"id="searchResults"></ul>
+    </div> 
+
+    <!-- -->
     
     <button class="entre" id="entrar"> <a href="Entrar/entre.html">ENTRE</a></button>
     <button class="cad" id="cad"> <a href="Cadastro/cad.html">CADASTRE-SE</a></button>
