--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -17,10 +17,18 @@
         </figure>
         
         <div class="search" id="search">
-           <input class="pesq" type="text" name="search" id="search">
+           <input class="pesq" type="text" name="search" id="txtBusca">
            <img class="lupa" src="../img/lupa 1.png" alt="Pesquisar">
         </div>
     
+        <!-- Lista da barra de pesquisa-->
+
+        <div class="busca">
+            <ul class="searchResult"id="searchResults"></ul>
+        </div> 
+
+        <!-- -->
+
         <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
     </header>
@@ -92,6 +100,8 @@
             <p>Todos os direitos reservados | Projeto portifólio</p>
         </section>
     </footer>
+
+    <script src="contato.js"></script>
 
 </body>
 </html>
