--- a/Entrar/entre.html
+++ b/Entrar/entre.html
@@ -17,9 +17,17 @@
         </figure>
         
         <div class="search" id="search">
-           <input class="pesq" type="text" name="search" id="search">
+           <input class="pesq" type="text" name="search" id="txtBusca">
            <img class="lupa" src="../img/lupa 1.png" alt="Pesquisar">
         </div>
+
+        <!-- Lista da barra de pesquisa-->
+
+        <div class="busca">
+            <ul class="searchResult"id="searchResults"></ul>
+        </div> 
+
+        <!-- -->
     
         <button class="entre" id="entrar"> <a href="entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
@@ -87,6 +95,7 @@
             <p>Todos os direitos reservados | Projeto portifólio</p>
         </section>
     </footer>
-
+ 
+    <script src="entre.js"></script>
 </body>
 </html>
