Responsividade das receitas individuais

--- a/Perfil/perfil.html
+++ b/Perfil/perfil.html
@@ -48,7 +48,7 @@
             <!--Banner-->
             <div class="max-width">
                  <div class="imgContainer">
-                    <img src="../img/banner.avif" alt="Selecione uma imagem" id="imgBanner">
+                    <img src="../img/newbanner.jpeg" alt="Selecione uma imagem" id="imgBanner">
 
                  </div>
             </div>
@@ -69,15 +69,18 @@
            </div>
 
             <div class="perfil">
-                <input type="file" id="filePerfil" name="filePerfil" accept="image/*">
+                <input type="file" id="filePerfil" name="filePerfil" accept="image/*" title="Alterar imagem de perfil">
 
             </div>
+
         </head>
     </section>
 
     <section class="conteudo">
         <div class="container">
             <div class="infoContent">
+
+                <h1>Laura Menezes</h1>
                 <label for="Sobre">Sobre:</label>
                 <textarea name="Sobre" id="Sobre" cols="35" rows="2"></textarea>
 
@@ -91,6 +94,17 @@
 
         <div class="favoritos">
             <h1>Receitas Favoritas</h1>
+
+            <section class="favBox">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+                <img src="../img/camarão.png" alt="">
+
+            </section>
         </div>
 
         </div>
