--- a/Receitas/peixe.html
+++ b/Receitas/peixe.html
@@ -30,6 +30,11 @@
     
         <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+        <div class="menuMobile">
+            <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+        </div>
+
     </header>
     
     <nav class="nav">
@@ -44,7 +49,7 @@
     <main>
         <h1 class="titulo" id="titulo">Peixe ao molho</h1>
     <div class="container">
-        <section >
+        <section class="imgInfo" >
 
             <figure class="peixeImg" id="peixeImg">
                 <img src="imagens/peixeaomolho.png" alt="Peixe ao molho">
@@ -111,7 +116,7 @@
         <footer>
         <section class="footer" id="footer">
             <div>
-                <figure>
+                <figure class="footerImg">
                     <a href="../index.html">
                         <img src="imagens/logo.png" alt="Logo">
                     </a>
@@ -134,5 +139,6 @@
         </section>
     </footer>
     <script src="receitas.js"></script>
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
 </body>
 </html>
