--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -31,6 +31,11 @@
 
         <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+        <div class="menuMobile">
+            <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+        </div>
+
     </header>
     
     <nav class="nav">
@@ -51,7 +56,7 @@
             </div>
 
             <div class="conteudo" id="conteudo">
-                <h1>Contate-nos</h1>
+                <h1>CONTATE-NOS</h1>
 
                 <div class="label" id="label">
                     <label for="name" type="name" id="name">Nome completo:</label>
@@ -78,7 +83,7 @@
     <footer>
         <section class="footer" id="footer">
             <div>
-                <figure>
+                <figure class="footerImg">
                     <a href="../index.html">
                         <img src="../img/logo.png" alt="Logo">
                     </a>
@@ -102,6 +107,7 @@
     </footer>
 
     <script src="contato.js"></script>
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
