Responsividade: contato e entre

--- a/Entrar/entre.html
+++ b/Entrar/entre.html
@@ -31,6 +31,11 @@
     
         <button class="entre" id="entrar"> <a href="entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+        <div class="menuMobile">
+            <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+        </div>
+
     </header>
     
     <nav class="nav">
@@ -64,7 +69,7 @@
                     <button class="enviar" id="enviar">Entrar</button>
                 </div>
 
-               <span>Esqueceu sua senha?<em>Clique aqui!</em></span>
+               <span>Esqueceu sua senha?<strong>Clique aqui!</strong></span>
 
             </div>
         </section>
@@ -73,7 +78,7 @@
     <footer>
         <section class="footer" id="footer">
             <div>
-                <figure>
+                <figure class="footerImg">
                     <a href="../index.html">
                         <img src="../img/logo.png" alt="Logo">
                     </a>
@@ -97,5 +102,7 @@
     </footer>
  
     <script src="entre.js"></script>
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
