Responsividade da tela "sobre" e começo da responsividade da tela "home"

--- a/Cadastro/cad.html
+++ b/Cadastro/cad.html
@@ -32,6 +32,10 @@
 
         <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
         <button class="cad" id="cad"> <a href="cad.html">CADASTRE-SE</a></button>
+
+        <div class="menuMobile">
+            <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+        </div>
     </header>
     
     <nav class="nav">
@@ -79,7 +83,7 @@
     <footer>
         <section class="footer" id="footer">
             <div>
-                <figure>
+                <figure class="footerImg">
                     <a href="../index.html">
                         <img src="../img/logo.png" alt="Logo">
                     </a>
@@ -103,6 +107,7 @@
     </footer>
 
     <script src="cadastro.js"></script>
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
 </body>
 </html>
     
