--- a/Receitapage/receita.html
+++ b/Receitapage/receita.html
@@ -31,7 +31,12 @@
     <!-- -->
 
     <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
-        <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+    <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+    <div class="menuMobile">
+        <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+    </div>
+    
 </header>
 
 <nav class="nav">
@@ -144,7 +149,7 @@
 
     <section class="footer" id="footer">
         <div>
-            <figure>
+            <figure class="footerImg">
                 <a href="../index.html">
                     <img src="img/logo.png" alt="Logo">
                 </a>
@@ -168,5 +173,6 @@
 </footer>
     
  <script src="receitapage.js"></script>   
+ <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
 </body>
 </html>
