--- a/Sobre/sobre.html
+++ b/Sobre/sobre.html
@@ -31,6 +31,11 @@
 
     <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRE</a></button>
     <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+    <div class="menuMobile">
+        <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+    </div>
+    
 </header>
 
 <nav class="nav">
@@ -48,7 +53,7 @@
     <h1>SOBRE NÓS</h1>
 
     <div class="conteudo">
-        <figure>
+        <figure class="sobreImg">
             <img src="../img/image 18.png" alt="Sobre nós">
         </figure>
 
@@ -75,7 +80,7 @@
 
     <section class="footer" id="footer">
         <div>
-            <figure>
+            <figure class="footerImg">
                 <a href="../index.html">
                     <img src="../img/logo.png" alt="Logo">
                 </a>
@@ -99,5 +104,6 @@
 </footer>
     
  <script src="sobre.js"></script>   
+ <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>
 </body>
 </html>
