Responsividade do box dos resultados de pesquisa

--- a/Cadastro/cad.html
+++ b/Cadastro/cad.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cad.css">
+    <link rel="stylesheet" href="../PesqBox/pesqbox.css">
+    <link rel="shortcut icon" href="../img/panela.png" type="image/x-icon">
     <title>Bom Sabor</title>
 
-    <link rel="stylesheet" href="cad.css">
-    <link rel="shortcut icon" href="../img/panela.png" type="image/x-icon">
 </head>
 <body>
 
