--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
+    <link rel="stylesheet" href="../PesqBox/pesqbox.css">
     <link rel="shortcut icon" href="../img/panela.png" type="image/x-icon">
     <title>Bom Sabor</title>
 </head>
