--- a/EsqSenha/esqSenha.html
+++ b/EsqSenha/esqSenha.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bom Sabor</title>
     <link rel="stylesheet" href="esqSenha.css">
+    <link rel="stylesheet" href="../PesqBox/pesqbox.css">
     <link rel="shortcut icon" href="../img/panela.png" type="image/x-icon">
     
 </head>
