--- a/Receitapage/receita.html
+++ b/Receitapage/receita.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bom sabor</title>
     <link rel="stylesheet" href="receita.css">
+    <link rel="stylesheet" href="../PesqBox/pesqbox.css">
     <link rel="shortcut icon" href="img/panela.png" type="image/x-icon">
     
 </head>
