Começando a responsividade do perfil

--- a/Entrar/entre.html
+++ b/Entrar/entre.html
@@ -70,7 +70,7 @@
                     <button class="enviar" id="enviar">Entrar</button>
                 </div>
 
-               <span>Esqueceu sua senha?<strong>Clique aqui!</strong></span>
+               <span>Esqueceu sua senha?<a href="../EsqSenha/esqSenha.html" style="color: #d57907;"><strong>Clique aqui!</strong></a></span>
 
             </div>
         </section>
