--- a/EsqSenha/esqSenha.html
+++ b/EsqSenha/esqSenha.html
@@ -58,10 +58,10 @@
 
                 <div class="labels">
                     <label for="SenhaNova">Insira sua nova senha:</label>
-                    <input type="password" class="inputSenhaNova">
+                    <input type="password" class="inputSenhaNova" placeholder="*************">
 
                     <label for="repSenhaNova">Repita sua senha novamente:</label>
-                    <input type="password" class="inputSenhaNova">
+                    <input type="password" class="inputSenhaNova" placeholder="*************">
 
                     
                 </div>
@@ -96,6 +96,10 @@
             <p>Todos os direitos reservados | Projeto portifólio</p>
         </section>
     </footer>
+
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script> 
+    <script src="esqSenha.js"></script>
     
 </body>
 </html>
+
