--- a/Perfil/perfil.html
+++ b/Perfil/perfil.html
@@ -31,7 +31,12 @@
     <!-- -->
 
     <button class="entre" id="entrar"> <a href="../Entrar/entre.html">ENTRAR</a></button>
-        <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+    <button class="cad" id="cad"> <a href="../Cadastro/cad.html">CADASTRE-SE</a></button>
+
+    <div class="menuMobile">
+        <i class="fa-solid fa-bars" style="color: #e6b60a;"></i>
+    </div>
+    
 </header>
 
 <nav class="nav">
@@ -113,10 +118,6 @@
 </main>
 
 <footer>
-    <section class="preFooter" id="preFooter">
-        &nbsp;
-    </section>
-
     <section class="footer" id="footer">
         <div>
             <figure>
@@ -142,6 +143,7 @@
     </section>
 </footer>
     
- <script src="perfil.js"></script>   
+    <script src="perfil.js"></script>  
+    <script src="https://kit.fontawesome.com/fe8eb85698.js" crossorigin="anonymous"></script>  
 </body>
 </html>
